Addressed the issue "When opening and scrolling to the top - and closing window the page jumps. Which can be a bit irritating."

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,7 @@ h1{
 .page{
   position: absolute;
   width: 100%;
+  top: 0;
 }
 
 .page-wrapper{
