--- a/src/app/components/popup-window/popup-window.component.scss
+++ b/src/app/components/popup-window/popup-window.component.scss
@@ -18,6 +18,7 @@
   border-radius: 5px;
   overflow: hidden;
   margin-bottom: 100px;
+  min-height: 500px;
 
   .layouts-container{
     position: relative;
@@ -49,6 +50,7 @@
     .default-layout{
       .header-image{
         max-height: 450px;
+        min-height: 400px;
         overflow: hidden;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
@@ -116,6 +118,7 @@
     .event-layout{
       .header-image{
         max-height: 430px;
+        min-height: 400px;
         overflow: hidden;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
@@ -175,6 +178,7 @@
     .association-layout{
       .header-image{
         max-height: 430px;
+        min-height: 400px;
         overflow: hidden;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
